# bridge

./: README.md
mpc/: README.md
relayer/:  .eslintrc.json  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
relayer/bridge/: Cargo.toml
relayer/bridge/src/: lib.rs
relayer/config/: Cargo.toml
relayer/config/src/: bridge_contract.rs  lib.rs
relayer/src/: bridge.rs  bridge.ts  constantd.ts  deposit.ts  error.rs  execute_bride.ts  index.ts  interface.ts  lib.rs  main.rs  transfer.ts
relayer/src/configs/: constants.ts
relayer/src/configs/smart-contracts/: AccessControlSegregator.json  DefaultMessageReceiver.json  ERC20Handler.json
relayer/src/handler/: erc20.rs  mod.rs
relayer/src/handlers/: bridge.ts  deposit.ts  index.ts
relayer/src/smart-contracts/: Bridge.json  ERC20PresetMinterPauser.json
relayer/src/tmp/: monitor.ts  types.ts
relayer/src/tmp/utils/: constants.ts
relayer/src/traits/: controller.rs  mod.rs
relayer/src/utils/: bridges.ts  create_resource_id.ts  index.ts  mod.rs
smart-contracts/: .env.example  .gitignore  README.md  foundry.toml  package.json  pnpm-lock.yaml  truffle-config.js
smart-contracts/contracts/: Bridge.sol  Migrations.sol
smart-contracts/helpers/: index.js
smart-contracts/migrations/: 1_initial_migration.js  2_deploy_bridge_contracts.js  2_setup_erc20.js  local.json  utils.js
tmp/: bridge.json  execute_bride.ts
tmp/relayer/: Cargo.toml
tmp/relayer/src/: bridge.rs  lib.rs  types.rs
tmp/relayer/src/traits/: handler.rs  mod.rs
tmp/relayer/src/utils/: crypto.rs  pausable.rs
(+38 files in other folders)
