[workspace]
members = [
    "bridge",
    "config"
]

resolver = "2"

[workspace.package]
authors = ["Selendra"]
edition = "2021"
repository = "https://github.com/selendra/bridge"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["ws", "abigen"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
eyre = "0.6.12"

bridge-config = { path = "config" }