[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.74"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

# Cryptographic dependencies
sha2 = "0.10.8"
k256 = "0.13.2"
signature = "2.1.0"
hex = "0.4.3"
clap = { version = "4.1.2", features = ["derive"] }

# Blockchain interaction
ethers = { version = "2.0.10", features = ["abigen", "ws", "rustls"] }
primitive-types = "0.12.1"

# Logging and configuration
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
config = "0.13.3"
dotenv = "0.15.0"

# Web APIs
axum = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }

chrono = "0.4.19"